Fix ascii art scaling on small devices

--- a/style/component/ascii.less
+++ b/style/component/ascii.less
@@ -1,5 +1,8 @@
 .ascii {
 	font-family: @font-family-ascii;
+    @media screen and (max-width: @vp-medium) {
+        font-size: 2.2vw;
+    }
 	display: table;
 	margin: 6rem 0 4rem 0;
 	line-height: 1;
